--- a/Academics.html
+++ b/Academics.html
@@ -39,7 +39,7 @@
                                 <li>Years of Study: 4 Years</li>
                             </ul>
                         </div>
-                        <a href="Courses/civil.html">Explore!</a>
+                        <a href="/Courses/civil.html">Explore!</a>
                     </li>
                     <li id="box">
                         <img src="./images/eee-info.jpg" alt="eee">
