--- a/Academics.html
+++ b/Academics.html
@@ -39,7 +39,7 @@
                                 <li>Years of Study: 4 Years</li>
                             </ul>
                         </div>
-                        <a href="./Courses/civil.html">Explore!</a>
+                        <a href="./courses/civil.html">Explore!</a>
                     </li>
                     <li id="box">
                         <img src="./images/eee-info.jpg" alt="eee">
@@ -52,7 +52,7 @@
                                 <li>Years of Study: 4 Years</li>
                             </ul>
                         </div>
-                        <a href="./Courses/eee.html">Explore!</a>
+                        <a href="./courses/eee.html">Explore!</a>
                     </li>
                     <li id="box">
                         <img src="./images/ece-info.jpg" alt="ece">
@@ -65,7 +65,7 @@
                                 <li>Years of Study: 4 Years</li>
                             </ul>
                         </div>
-                        <a href="./Courses/ece.html">Explore!</a>
+                        <a href="./courses/ece.html">Explore!</a>
                     </li>
                     <li id="box">
                         <img src="./images/cse-info.jpg" alt="cse">
@@ -78,7 +78,7 @@
                                 <li>Years of Study: 4 Years</li>
                             </ul>
                         </div>
-                        <a href="./Courses/cse.html">Explore!</a>
+                        <a href="./courses/cse.html">Explore!</a>
                     </li>
                     <li id="box">
                         <img src="./images/mech-info.jpg" alt="mech">
@@ -92,7 +92,7 @@
                                 <li>Years of Study: 4 Years</li>
                             </ul>
                         </div>
-                        <a href="./Courses/mech.html">Explore!</a>
+                        <a href="./courses/mech.html">Explore!</a>
                     </li>
                     <li id="box">
                         <img src="./images/it-info.png" alt="it">
@@ -105,7 +105,7 @@
                                 <li>Years of Study: 4 Years</li>
                             </ul>
                         </div>
-                        <a href="./Courses/it.html">Explore!</a>
+                        <a href="./courses/it.html">Explore!</a>
                     </li>
                     <li id="box">
                         <img src="./images/bt-info.jpg" alt="bt">
@@ -118,7 +118,7 @@
                                 <li>Years of Study: 4 Years</li>
                             </ul>
                         </div>
-                        <a href="./Courses/bt.html">Explore!</a>
+                        <a href="./courses/bt.html">Explore!</a>
                     </li>
                     <li id="box">
                         <img src="./images/bme-info.jpg" alt="bme">
@@ -131,7 +131,7 @@
                                 <li>Years of Study: 4 Years</li>
                             </ul>
                         </div>
-                        <a href="./Courses/bme.html">Explore!</a>
+                        <a href="./courses/bme.html">Explore!</a>
                     </li>
                     <li id="box">
                         <img src="./images/ai-info.jpg" alt="aids">
@@ -144,7 +144,7 @@
                                 <li>Years of Study: 4 Years</li>
                             </ul>
                         </div>
-                        <a href="./Courses/aids.html">Explore!</a>
+                        <a href="./courses/aids.html">Explore!</a>
                     </li>
                 </ul>
             </center>
